Do not store trace reference to aux elements (#327)